# trilha-certa-app

./: CHANGELOG.md  README.md  pyproject.toml
src/: manage.py
src/trilha_certa/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_sample.py
trilha_certa/: manage.py
trilha_certa/trilha_certa/: asgi.py  settings.py  urls.py  wsgi.py
